--- a/src/app/styles/_svg.scss
+++ b/src/app/styles/_svg.scss
@@ -1,7 +1,7 @@
-svg#treemap {
+svg.treemap{
   background: none;
   color: black;
-  margin: 0 5vw 0 5vw;
+  margin: 1vw 3vw 0 3vw;
   //padding: 10px;
   transform: scale(1);
   -webkit-transform: scale(1);
@@ -10,6 +10,10 @@ svg#treemap {
   -o-transform: scale(1);
   overflow: hidden;
   //padding-bottom: 50px;
+}
+
+svg.treemap:hover {
+  cursor: crosshair;
 }
 
 svg#legend {
@@ -21,38 +25,3 @@ svg#legend {
 .legend-text {
   text-anchor: middle;
 }
-
-// var legend = d3.select("#legend")
-//   var legendWidth = +legend.attr("width");
-//   const LEGEND_OFFSET = 10;
-//   const LEGEND_RECT_SIZE = 15;
-//   const LEGEND_H_SPACING = 150;
-//   const LEGEND_V_SPACING = 10;
-//   const LEGEND_TEXT_X_OFFSET = 3;
-//   const LEGEND_TEXT_Y_OFFSET = -2;
-//   var legendElemsPerRow = Math.floor(legendWidth/LEGEND_H_SPACING);
-  
-//   var legendElem = legend
-//     .append("g")
-//     .attr("transform", "translate(60," + LEGEND_OFFSET + ")")
-//     .selectAll("g")
-//     .data(categories)
-//     .enter().append("g")
-//     .attr("transform", function(d, i) { 
-//       return 'translate(' + 
-//       ((i%legendElemsPerRow)*LEGEND_H_SPACING) + ',' + 
-//       ((Math.floor(i/legendElemsPerRow))*LEGEND_RECT_SIZE + (LEGEND_V_SPACING*(Math.floor(i/legendElemsPerRow)))) + ')';
-//     })
-     
-//   legendElem.append("rect")                              
-//      .attr('width', LEGEND_RECT_SIZE)                          
-//      .attr('height', LEGEND_RECT_SIZE)     
-//      .attr('class','legend-item')                 
-//      .attr('fill', function(d){
-//        return color(d);
-//      })
-     
-//    legendElem.append("text")                              
-//      .attr('x', LEGEND_RECT_SIZE + LEGEND_TEXT_X_OFFSET)                          
-//      .attr('y', LEGEND_RECT_SIZE + LEGEND_TEXT_Y_OFFSET)                       
-//      .text(function(d) { return d; });  
